# mlops-lab1

./: .pre-commit-config.yaml  .sops.yaml  LICENSE  README.md  app.py  docker-compose.yaml  dockerfile  inference.py  main.py  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py  test_app.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_settings.py
